Fix menu alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ header {
     box-shadow: -1px -1px 6px #888888;
 }
 
+header>nav {
+    display: flex;
+    justify-content: space-between;
+}
+
 nav {
     display: flex;
 }
@@ -71,7 +76,8 @@ fieldset {
 }
 
 .greeting {
-    float: right;
+    height: 140px;
+    width: 900px;
     font-size: 80pt;
     font-family: Helvetica, "Times New Roman", Times, serif;
     padding-bottom: 0px;
@@ -79,11 +85,12 @@ fieldset {
     position: relative;
     top: 200px;
     background-color: rgba( 0, 0, 0, 0.25);
+    text-align: center;
+    float: right;
 }
 
 .navigation-menu {
     list-style-type: none;
-    padding-left: 0px;
 }
 
 /* Remove the numbers from the list in nav */
@@ -92,8 +99,14 @@ fieldset {
     display: inline-block;
 }
 
+.menu a::before {
+    padding: 40px 10px;
+    margin: 10px 10px;
+    content: '';
+}
+
 .menu a::after {
-    padding: 40px 0px;
+    padding: 40px 10px;
     margin: 10px 10px;
     display: inline-block;
     content: '';
@@ -106,10 +119,11 @@ fieldset {
     font-weight: bold;
     font-family: Helvetica, "Times New Roman", Times, serif;
     margin: 10px 10px;
-    padding: 14px 20px;
+    padding: 14px 14px;
+    /* Remove the underline on the links */
     text-decoration: none;
     font-size: 20px;
-    text-align: center;
+    justify-content: space-around;
     background-color: rgba(255, 192, 203, 0.267);
     box-shadow: -1px -1px 6px #888888;
     /* Add rounded corners to shadow box */
@@ -137,11 +151,11 @@ fieldset {
     background: white;
 }
 
-#resumeImg, contactMe {
+#resumeImg, #contactMe {
     height: 500px;
     width: 500px;
-    margin: 10px 0px;
-    padding: 10px 10px;
+    margin: 10px;
+    padding: 10px;
 }
 
 #mainBody {
